logs/solent.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/solent'...
Listing './lib/python3.5/site-packages/solent/base'...
Listing './lib/python3.5/site-packages/solent/console'...
Listing './lib/python3.5/site-packages/solent/console/curses'...
Listing './lib/python3.5/site-packages/solent/console/pygame'...
Listing './lib/python3.5/site-packages/solent/console/windows'...
Listing './lib/python3.5/site-packages/solent/demo'...
Listing './lib/python3.5/site-packages/solent/draft'...
Compiling './lib/python3.5/site-packages/solent/draft/bona_file_server.py'...
***   File "./lib/python3.5/site-packages/solent/draft/bona_file_server.py", line 53
    self.
        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/solent/draft/turnlib'...
Listing './lib/python3.5/site-packages/solent/eng'...
Listing './lib/python3.5/site-packages/solent/gruel'...
Listing './lib/python3.5/site-packages/solent/gruel/client'...
Listing './lib/python3.5/site-packages/solent/gruel/server'...
Listing './lib/python3.5/site-packages/solent/pyinstaller'...
Listing './lib/python3.5/site-packages/solent/redis'...
Listing './lib/python3.5/site-packages/solent/rogue'...
Listing './lib/python3.5/site-packages/solent/rogue/simple_00_weed_the_garden'...
Listing './lib/python3.5/site-packages/solent/rogue/swamp_monster'...
Listing './lib/python3.5/site-packages/solent/tools'...
Listing './lib/python3.5/site-packages/solent/util'...
Listing './lib/python3.5/site-packages/solent-0.49.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
